--- a/hilfe.html
+++ b/hilfe.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 </head>
 <body>
-<h1>Hilfe und haufig gestellte Frage</h1>
+<h1>Hilfe und haufig gestellte Fragen</h1>
 
 <div class="accordion" id="accordionExample">
     <div class="accordion-item">
