--- a/Kunden-Registrierung.html
+++ b/Kunden-Registrierung.html
@@ -1,12 +1,76 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <title>Kunden Registrierung</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 </head>
 <body>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            Column
+        </div>
+        <div class="col">
+            <h1>Kunden Registrierung</h1>
+        </div>
+        <div class="col">
+            Column
+        </div>
+    </div>
+    <div class="row">
+        <div class="col"></div>
+        <div class="col">
 
-<h1>Kunden Registrierung</h1>
+            <form>
+                <div class="mb-3">
+                    <label for="email" class="form-label">E-Mail Adresse</label>
+                    <input type="email" class="form-control" id="email" aria-describedby="emailHelp" required>
+                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                </div>
+                <div class="mb-3">
+                    <label for="salutation" class="form-label">Anrede</label>
+                    <select id="salutation" class="form-select" required>
+                        <option>Frau</option>
+                        <option>Herr</option>
+                        <option>Anders</option>
+                    </select>
+                </div>
+                <div class="mb-3">
+                    <label for="firstname" class="form-label">Vorname</label>
+                    <input type="text" class="form-control" id="firstname" required>
+                </div>
+                <div class="mb-3">
+                    <label for="lastname" class="form-label">Nachname</label>
+                    <input type="text" class="form-control" id="lastname" required>
+                </div>
+                <div class="mb-3">
+                    <label for="plz" class="form-label">Postleitzahl</label>
+                    <input type="text" class="form-control" id="plz" required>
+                </div>
+                <div class="mb-3">
+                    <label for="city" class="form-label">Ort</label>
+                    <input type="text" class="form-control" id="city" required>
+                </div>
+
+                <div class="mb-3">
+                    <label for="exampleInputPassword1" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="exampleInputPassword1">
+                </div>
+                <div class="mb-3 form-check">
+                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+
+        </div>
+        <div class="col"></div>
+    </div>
+</div>
+
+
+
 <form action="">
     <label for="email">E-Mail Adresse:</label><br>
     <input type="email" required id="email" name="email" placeholder="Ihre E-Mail Adresse"><br>
@@ -44,5 +108,7 @@
 
 
 </form>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
 </html>
