--- a/Kunden-Registrierung.html
+++ b/Kunden-Registrierung.html
@@ -19,9 +19,10 @@
         </div>
     </div>
     <div class="row">
-        <div class="col"></div>
         <div class="col">
-
+            Column
+        </div>
+        <div class="col">
             <form>
                 <div class="mb-3">
                     <label for="email" class="form-label">E-Mail Adresse</label>
@@ -52,62 +53,32 @@
                     <label for="city" class="form-label">Ort</label>
                     <input type="text" class="form-control" id="city" required>
                 </div>
-
                 <div class="mb-3">
-                    <label for="exampleInputPassword1" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1">
+                    <label for="street" class="form-label">Straße</label>
+                    <input type="text" class="form-control" id="street" required>
+                </div>
+                <div class="mb-3">
+                    <label for="number" class="form-label">Hausnummer</label>
+                    <input type="text" class="form-control" id="number" required>
+                </div>
+                <div class="mb-3">
+                    <label for="password" class="form-label">Kennwort</label>
+                    <input type="password" class="form-control" id="password">
                 </div>
                 <div class="mb-3 form-check">
                     <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                    <label class="form-check-label" for="exampleCheck1">Ich acceptiere die Datenschutz diese Website</label>
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary">Absenden</button>
+                 <p><a href="./kennwortreset.html">Kennwortvergessen</a></p>
+                <button type="reset" class="btn btn-primary">Reset</button></div>
+                <p><a href="./hilfe.html">Hilfe</a></p>
+                </div>
             </form>
-
         </div>
-        <div class="col"></div>
+    <div class="col">
+        Column
     </div>
-</div>
-
-
-
-<form action="">
-    <label for="email">E-Mail Adresse:</label><br>
-    <input type="email" required id="email" name="email" placeholder="Ihre E-Mail Adresse"><br>
-    <label for="salutation">Anrede</label><br>
-    <select id="salutation" name="salutation" required>
-        <option value="0">Frau</option>
-        <option value="1">Herr</option>
-        <option value="2">Anders</option>
-    </select><br>
-    <label for="firstname">Vorname</label><br>
-    <input type="text" required id="firstname" name="firstname"><br>
-    <label for="lastname">Nachname</label><br>
-    <input type="text" required id="lastname" name="lastname"><br>
-    <label for="plz">Postleitzahl</label><br>
-    <input type="text" required id="plz" name="plz"><br>
-    <label for="city">Ort</label><br>
-    <input type="text" required id="city" name="city"><br>
-    <label for="street">Straße</label><br>
-    <input type="text" required id="street" name="street"><br>
-    <label for="number">Hausnummer </label><br>
-    <input type="text" required id="number" name="number"><br>
-
-
-
-    <label for="pword">Kennwort</label><br>
-    <input type="password" required id="pword" name="pword"><br><br>
-    <lable><input type="checkbox" required>Ich acceptiere die Datenschutz diese Website</lable>
-    <h5><a href="./kennwortreset.html">Kennwortvergessen</a></h5>
-    <h5><a href="./hilfe.html">Hilfe</a></h5>
-
-
-
-    <button type="submit">Absenden</button>  <button type="reset">Reset</button>
-
-
-
-</form>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
