--- a/Kunden-Registrierung.html
+++ b/Kunden-Registrierung.html
@@ -12,7 +12,7 @@
             Column
         </div>
         <div class="col">
-            <h1>Kunden Registrierung</h1>
+            <h1>Kunden Benennung</h1>
         </div>
         <div class="col">
             Column
