--- a/col.html
+++ b/col.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -46,7 +46,7 @@
                 </li>
             </ul>
             <div style="margin-right: 10px"><a class="btn btn-primary" href="login.html" role="button">Login</a></div>
-            <div> <a class="btn btn-secondary" href="Kunden-Registrierung.html.html" role="button">Regestrierung</a></div>
+            <div> <a class="btn btn-secondary" href="kunden-registrierung.html" role="button">Regestrierung</a></div>
         </div>
     </div>
 </nav>
