--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <title>Startseite</title>
@@ -9,7 +9,7 @@
     <a href="./index.html">Startseite</a>
 </li>
 <li>
-    <a href="Kunden-Registrierung.html">Anmeldung</a>
+    <a href="kunden-registrierung.html">Anmeldung</a>
 </li>
 <li>
     <a href="./hilfe.html">Hilfe</a>
