--- a/kennwortreset.html
+++ b/kennwortreset.html
@@ -1,18 +1,56 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="de">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Kennwort Reset</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+
 </head>
 <body>
-<h1>Kennwort Reset</h1>
-<form action="">
-    <lable>Ihre Email</lable>
-    <input type="email"><br><br>
-    <input type="checkbox"required>
-    <lable>Ich bin mir sicher, dass ich meine Kontokenwort neuerstellen will</lable>
-    <br><br>
-    <input type="submit"value="Kennwortreset">
-</form>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            Column
+        </div>
+        <div class="col">
+            <h1>Kennwort Reset</h1>
+        </div>
+        <div class="col">
+            Column
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            Column
+        </div>
+        <div class="col">
+            <form>
+                <div class="mb-3">
+                    <label for="email" class="form-label">E-Mail Adresse</label>
+                    <input type="email" class="form-control" id="email" aria-describedby="emailHelp" required>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" required>
+                    <label class="form-check-label" for="flexCheckDefault">
+                        Ich bin mir sicher, dass ich meine Kontokenwort neuerstellen will
+                    </label>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <button type="submit" class="btn btn-primary">kennwort zurücksetzen</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div class="col">
+            Column
+        </div>
+    </div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
 </html>
