--- a/kunden-registrierung.html
+++ b/kunden-registrierung.html
@@ -1,35 +1,37 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="de">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Kunden Registrierung</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 </head>
 <body>
+
 <div class="container">
     <div class="row">
-        <div class="col">
-            Column
-        </div>
-        <div class="col">
-            <h1>Kunden Benennung</h1>
-        </div>
-        <div class="col">
-            Column
+        <div class="col-md-auto">
+            <h1>Kunden Registrierung</h1>
         </div>
     </div>
     <div class="row">
-        <div class="col">
+        <div class="col-6 col-md-8">
             Column
         </div>
-        <div class="col">
-            <form>
-                <div class="mb-3">
+        <div class="col-6 col-md-4 d-none d-md-block">
+            <form class="row g-3">
+                <div class="col-md-6">
                     <label for="email" class="form-label">E-Mail Adresse</label>
                     <input type="email" class="form-control" id="email" aria-describedby="emailHelp" required>
-                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                    <div id="emailHelp" class="form-text">Wir werden Ihre E-Mail niemals mit anderen teilen.</div>
                 </div>
-                <div class="mb-3">
+                <div class="col-md-6">
+                    <label for="password" class="form-label">Kennwort</label>
+                    <input type="password" class="form-control" id="password">
+                </div>
+                <div class="col-md-2">
                     <label for="salutation" class="form-label">Anrede</label>
                     <select id="salutation" class="form-select" required>
                         <option>Frau</option>
@@ -37,14 +39,55 @@
                         <option>Anders</option>
                     </select>
                 </div>
-                <div class="mb-3">
+                <div class="col-5">
                     <label for="firstname" class="form-label">Vorname</label>
                     <input type="text" class="form-control" id="firstname" required>
                 </div>
-                <div class="mb-3">
+                <div class="col-5">
                     <label for="lastname" class="form-label">Nachname</label>
                     <input type="text" class="form-control" id="lastname" required>
                 </div>
+                <div class="col-12">
+                    <label for="inputAddress" class="form-label">Address</label>
+                    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                </div>
+                <div class="col-12">
+                    <label for="inputAddress2" class="form-label">Address 2</label>
+                    <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+                </div>
+                <div class="col-md-6">
+                    <label for="city" class="form-label">Ort</label>
+                    <input type="text" class="form-control" id="city" required>
+                </div>
+                <div class="col-md-4">
+                    <label for="inputState" class="form-label">State</label>
+                    <select id="inputState" class="form-select">
+                        <option selected>Choose...</option>
+                        <option>...</option>
+                    </select>
+                </div>
+                <div class="col-md-2">
+                    <label for="plz" class="form-label">Postleitzahl</label>
+                    <input type="text" class="form-control" id="plz" required>
+                </div>
+                <div class="col-12">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="gridCheck">
+                        <label class="form-check-label" for="gridCheck">
+                            Ich acceptiere die Datenschutz diese Website
+                        </label>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <button type="submit" class="btn btn-primary">Sign in</button>
+                </div>
+            </form>
+
+
+
+
+            <form>
+
                 <div class="mb-3">
                     <label for="plz" class="form-label">Postleitzahl</label>
                     <input type="text" class="form-control" id="plz" required>
@@ -69,16 +112,18 @@
                     <input type="checkbox" class="form-check-input" id="exampleCheck1">
                     <label class="form-check-label" for="exampleCheck1">Ich acceptiere die Datenschutz diese Website</label>
                 </div>
-                <button type="submit" class="btn btn-primary">Absenden</button>
-                 <p><a href="./kennwortreset.html">Kennwortvergessen</a></p>
+                <div><button type="submit" class="btn btn-primary">Absenden</button></div>
+
+                <p><a href="./kennwortreset.html">Kennwortvergessen</a></p>
                 <button type="reset" class="btn btn-primary">Reset</button></div>
                 <p><a href="./hilfe.html">Hilfe</a></p>
-                </div>
             </form>
-        </div>
+    </div>
     <div class="col">
         Column
     </div>
+</div>
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
