--- a/login.html
+++ b/login.html
@@ -1,9 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Kunden Registrierung</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Kunden Login</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 </head>
 <body>
 <div class="container">
@@ -12,7 +16,7 @@
             Column
         </div>
         <div class="col">
-            <h1>Kunden Benennung</h1>
+            <h1>Kunden Login</h1>
         </div>
         <div class="col">
             Column
@@ -27,59 +31,32 @@
                 <div class="mb-3">
                     <label for="email" class="form-label">E-Mail Adresse</label>
                     <input type="email" class="form-control" id="email" aria-describedby="emailHelp" required>
-                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-                </div>
-                <div class="mb-3">
-                    <label for="salutation" class="form-label">Anrede</label>
-                    <select id="salutation" class="form-select" required>
-                        <option>Frau</option>
-                        <option>Herr</option>
-                        <option>Anders</option>
-                    </select>
-                </div>
-                <div class="mb-3">
-                    <label for="firstname" class="form-label">Vorname</label>
-                    <input type="text" class="form-control" id="firstname" required>
-                </div>
-                <div class="mb-3">
-                    <label for="lastname" class="form-label">Nachname</label>
-                    <input type="text" class="form-control" id="lastname" required>
-                </div>
-                <div class="mb-3">
-                    <label for="plz" class="form-label">Postleitzahl</label>
-                    <input type="text" class="form-control" id="plz" required>
-                </div>
-                <div class="mb-3">
-                    <label for="city" class="form-label">Ort</label>
-                    <input type="text" class="form-control" id="city" required>
-                </div>
-                <div class="mb-3">
-                    <label for="street" class="form-label">Straße</label>
-                    <input type="text" class="form-control" id="street" required>
-                </div>
-                <div class="mb-3">
-                    <label for="number" class="form-label">Hausnummer</label>
-                    <input type="text" class="form-control" id="number" required>
                 </div>
                 <div class="mb-3">
                     <label for="password" class="form-label">Kennwort</label>
                     <input type="password" class="form-control" id="password">
                 </div>
-                <div class="mb-3 form-check">
-                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                    <label class="form-check-label" for="exampleCheck1">Ich acceptiere die Datenschutz diese Website</label>
+                <div class="row">
+                    <div class="col">
+                        <button type="submit" class="btn btn-primary">Einloggen</button>
+                    </div>
+                    <div class="col">
+                        <button type="reset" class="btn btn-primary">Reset</button>
+                    </div>
                 </div>
-                <button type="submit" class="btn btn-primary">Absenden</button>
-                 <p><a href="./kennwortreset.html">Kennwortvergessen</a></p>
-                <button type="reset" class="btn btn-primary">Reset</button></div>
-                <p><a href="./hilfe.html">Hilfe</a></p>
-                </div>
+                <p><a href="./kennwortreset.html">Kennwortvergessen</a></p>
+
             </form>
         </div>
-    <div class="col">
-        Column
+        <div class="col">
+            Column
+        </div>
     </div>
+</div>
+<p><a href="./hilfe.html">Hilfe</a></p>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+        crossorigin="anonymous"></script>
 </body>
 </html>
