Added Products JQuery

--- a/Impressum.html
+++ b/Impressum.html
@@ -10,6 +10,8 @@
     <script src="components/header.js" type="text/javascript" defer></script>
     <script src="components/footer.js" type="text/javascript" defer></script>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="icon" href="./images/Tee_Shirts_Logo.svg" sizes="16x16 32x32" type="image/svg">
+
 </head>
 <body>
 <header-component></header-component>
@@ -29,7 +31,6 @@
                 Musterweg<br>
                 12345 Musterstadt <br>
             </p><p> <strong>Vertreten durch: </strong><br>
-            Rem Bereuter<br>
             Samer Al Fara<br>
         </p><p><strong>Kontakt:</strong> <br>
             Telefon: 01234-789456<br>
