--- a/kennwortreset.html
+++ b/kennwortreset.html
@@ -10,6 +10,8 @@
     <script src="components/header.js" type="text/javascript" defer></script>
     <script src="components/footer.js" type="text/javascript" defer></script>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="icon" href="./images/Tee_Shirts_Logo.svg" sizes="16x16 32x32" type="image/svg">
+
 
 </head>
 <body>
