--- a/kunden-registrierung.html
+++ b/kunden-registrierung.html
@@ -91,11 +91,13 @@
                     <button type="reset" class="btn btn-primary">Neustarten</button>
                 </div>
                 <div class="col-3"></div>
-                <div class="col-12" style="text-align: center"><p><a href="./kennwortreset.html">Kennwortvergessen</a></p></div>
+                <div class="col-12" style="text-align: center"><p><a href="./kennwortreset.html">Kennwortvergessen</a>
+                </p></div>
             </form>
         </div>
         <div class="col-1 col-sm-2 col-md-2 col-lg-3"></div>
     </div>
+</div>
 
     <div>
         <footer-component></footer-component>
