--- a/Impressum.html
+++ b/Impressum.html
@@ -31,7 +31,7 @@
                 Musterweg<br>
                 12345 Musterstadt <br>
             </p><p> <strong>Vertreten durch: </strong><br>
-            Samer Al Fara<br>
+            Samer Al Fara | Rem Bereuter<br>
         </p><p><strong>Kontakt:</strong> <br>
             Telefon: 01234-789456<br>
             Fax: 1234-56789<br>
