--- a/brands.html
+++ b/brands.html
@@ -62,6 +62,8 @@
                 justify-content-center
               "
             >
+            
+
               <form id="brand" url="http://localhost:8080/brands">
                 <div class="form-group">
                   <div class="mb-3">
@@ -70,7 +72,7 @@
                     >
                     <input
                       type="text"
-                      class="form-control"
+                      class="form-control brand-name-form"
                       id="brand-name"
                       name="brand-name"
                       required
